--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,49 @@
 </head>
 
 <body>
+    <div>
+        <h1 class="head-line">PEOPLE'S REPUBLIC OF BANGLADESH </h1>
+    </div>
+    <div class="button"><button> Home </button> <button> Contact </button>
+        <button>
+            About Me </button> <button> Sing-Up </button>
+    </div>
+
+    <SECtion class="Main-line">
+        <div>
+            <h1 class="ruls">BANGLADESH</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, natus Lorem ipsum dolor sit amet
+                consectetur
+                adipisicing elit. Asperiores consequatur dicta, numquam veniam quis consequuntur inventore nesciunt
+                laboriosam fugiat tempora corporis! Officiis, repudiandae exercitationem magni iste assumenda omnis ve l
+                repellat earum laborum laboriosam optio culpa id necessitatibus voluptatibus, neque autem placeat itaque
+                nam
+                atque suscipit maxime debitis molestiae nobis. Voluptatibus nobis id deserunt porro blanditiis, a quo
+                architecto laborum inventore qui illum alias ullam nostrum, magni nisi sint! Dolores sint quisquam harum
+                nisi ullam numquam fugiat eveniet praesentium reprehenderit consequuntur dolorem atque cum ratione,
+                sapiente
+                asperiores blanditiis excepturi similique rem. Ducimus, dolore. Quis, facere quas excepturi nisi rerum
+                officia optio? </p>
+            <button class="button-line">details</button>
+        </div>
+
+        <div class="images">
+            <img src="./images/map.png" alt="">
+        </div>
+    </SECtion>
+    <section class="phone">
+        <h1 class="telephone">Bangladesh All Divisions</h1>
+        <div class="mobile">
+            <img src="./images/dhaka.jpg" alt="">
+            <h1> Dhaka </h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores iste vero illo sint, est harum
+                necessitatibus similique laborum. Voluptatum hic ipsam alias cupiditate eveniet facere aperiam
+                accusantium? Corporis aperiam, explicabo repellat et corrupti laboriosam nihil molestias, cupiditate
+                quibusdam excepturi facere voluptatibus veritatis labore maiores nulla in pariatur assumenda odio
+                libero! </p>
+        </div>
+        <button> details </button>
+    </section>
 
 </body>
 
